@@ -2,6 +2,7 @@ Current:
   * Improved italian translation by Marco Ciampa
   * Autocompletion no more causes asserts
   * A better logic that decides which cell to send to maxima
+  * wxMaxima now supports "-l", "-u" and "-X" command-line args like maxima
 
 19.11.0:
   * Chinese translation updates from liulitchi
